--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgb(74, 79, 105);
 }
-
-.App-link {
-  color: #61dafb;
+.sub{
+  border: 1px solid black;
+  width: 600px;
+  height: 500px;
+  box-shadow: 13px 13px 15px #faf7f7, -3px -3px 5px #fffdfd;
+  margin-top: 50px;
+  border-radius: 50px;
+  background-color: rgb(74, 79, 105);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub>h1{
+  font-size: 90px;
+  display: flex;
+  justify-content: center;
+  box-shadow: 3px 3px 5px #f8f6f6, -3px -3px 5px #f3efef;
+  border-radius: 50px;
+  font-family: Agbalumo;
+  color: rgb(145, 255, 0);
+  
+  background-color: rgb(74, 79, 105);
+}
+.sub>p{
+  font-size: 90px;
+  display: flex;
+  justify-content: center;
+  box-shadow: 3px 3px 5px #f8f4f4, -3px -3px 5px #fffefe;
+  border-radius: 50px;
+  background-color: rgb(74, 79, 105);
+  color: rgb(145, 255, 0);
+  font-family: Agbalumo;
 }
